--- a/style.css
+++ b/style.css
@@ -28,10 +28,16 @@ body{
     color: var(--text-color);
 }
 
+/* Section general */
 section {
     min-height: 100vh;
     /* padding: .1rem 9% 1rem; */
-    padding: 2rem 9%;
+    padding: 9% 9%;
+}
+/* Section general */
+
+.hero--section {
+    padding: .1rem 9%;
 }
 
 .header{
@@ -171,4 +177,206 @@ span {
 .about--content p {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
+}
+
+/* SKILLS SECTION */
+.skills h2 {
+    margin-bottom: 5rem;
+}
+
+.skills--container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.skills--container .skill--card {
+    flex: 1 1 30rem;
+    background: var(--second--background-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    /* border: .2rem solid var(--background-color); */
+    transition: 0.1s ease-in;
+}
+
+.skills--container .skill--card:hover {
+    border: .1rem solid var(--main-color);
+    transform: scale(1.02);
+}
+
+.skill--card i {
+    font-size: 7rem;
+    color: var(--main-color);
+}
+
+.skill--card h3 {
+    font-size: 2.6rem;
+}
+
+.skill--card p {
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+
+
+/* PORTFOLIO SECTION */
+.portfolio {
+    background: var(--second--background-color);
+}
+
+.portfolio h2 {
+    margin-bottom: 4rem;
+}
+
+.portfolio--container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start; /* Adjust as needed */
+    gap: 2.5rem;
+}
+
+.portfolio--card {
+    flex-basis: calc(33.33% - 2.5rem); /* Adjust for 3 columns with gap */
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column; /* Stack child elements vertically */
+}
+
+.portfolio--card img {
+    width: 100%;
+    transition: .5s ease;
+}
+
+.portfolio--card:hover img {
+    transform: scale(1.1);
+}
+
+.portfolio--layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0,.1), rgba(0,38,77,1));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem 4rem;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+
+.portfolio--card:hover .portfolio--layer {
+    transform: translateY(0);
+}
+
+.portfolio--layer h4 {
+    font-size: 2.5rem;
+}
+
+.portfolio--layer p {
+    font-size: 1.2rem;
+    margin: .3rem 0 1rem;
+}
+
+.portfolio--layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+
+.portfolio--layer a i {
+    font-size: 2rem;
+    color: var(--second--background-color);
+}
+
+/* Contact section */
+
+.contact h2 {
+    margin-bottom: 3rem;
+}
+
+.contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact form .input--box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input--box input,
+.contact form textarea {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--second--background-color);
+    border-radius: .8rem;
+    margin: .7rem 0
+}
+
+.contact form .input--box input {
+    width: 50%;
+}
+
+.contact form textarea {
+    resize: none;
+}
+
+.contact form .button {
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+/* Footer */
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column-reverse;
+    /* flex-wrap: wrap; */
+    padding: 2rem 9%;
+    background: var(--second--background-color);
+}
+
+.footer--content p {
+    margin-top: 9%;
+    font-size: 1.6rem;
+}
+
+.footer--topIcon a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    background: var(--second--background-color);
+    border-radius: 1rem;
+    transition: .5s ease;
+    box-shadow: 0 0 1rem var(--main-color);
+}
+
+.footer--topIcon a:hover {
+    box-shadow: none;
+}
+
+.footer--topIcon a i {
+    font-size: 2.4rem;
+    color: var(--text-color);
 }
