--- a/style.css
+++ b/style.css
@@ -81,7 +81,12 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 4rem;
+    margin-top: 4.8rem;
+}
+
+.hero--image {
+    margin-bottom: 3rem;
+    margin-left: 3rem;
 }
 
 .hero--image img{
@@ -89,7 +94,7 @@ section {
 }
 
 .hero--content h3{
-    font-size: 3.2rem;
+    font-size: 2.8rem;
     font-weight: 700;
 }
 
@@ -102,7 +107,7 @@ span {
 }
 
 .hero--content h1 {
-    font-size: 5.6rem;
+    font-size: 3.6rem;
     font-weight: 700;
     line-height: 1.3;
 }
@@ -157,6 +162,10 @@ span {
     background: var(--second--background-color);
 }
 
+.about--image {
+    margin-right: 3rem;
+}
+
 .about--image img {
     width: 35vw;
 }
@@ -172,7 +181,7 @@ span {
 }
 
 .about--content h3 {
-    font-size: 2.6rem;
+    font-size: 2.8rem;
 }
 
 .about--content p {
@@ -214,7 +223,7 @@ span {
 }
 
 .skill--card h3 {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
 }
 
 .skill--card p {
@@ -491,3 +500,56 @@ span {
         flex-basis: calc(100% - 2.5rem); /* 1 columns with gap */
     }
 }
+
+/* Modal window ABOUT section */
+  
+  .close-modal {
+    position: absolute;
+    top: 1.2rem;
+    right: 2rem;
+    font-size: 5rem;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+  }
+
+.hidden {
+    display: none;
+  }
+  
+  .modal {
+    position: fixed; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    /* width: 100%;  */
+    width: auto;
+    height: auto; 
+    margin: 0; 
+    padding: 2rem; 
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.95);
+    overflow: auto; 
+    z-index: 102;
+}
+
+.modal p {
+    color: black;
+}
+
+.modal h1 {
+    color: black;
+}
+
+.overlay {
+    position: fixed; /* Change to fixed positioning */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+    z-index: 101;
+}
+  /* Modal window ABOUT section */
