--- a/style.css
+++ b/style.css
@@ -249,22 +249,25 @@ span {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start; /* Adjust as needed */
-    gap: 2.5rem;
+    align-items: flex-start;
+    gap: 2.4rem;
 }
 
 .portfolio--card {
-    flex-basis: calc(33.33% - 2.5rem); /* Adjust for 3 columns with gap */
+    flex-basis: calc(33.33% - 2.4rem);
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--main-color);
     overflow: hidden;
     display: flex;
-    flex-direction: column; /* Stack child elements vertically */
+    flex-direction: column; 
+    height: 16vw;
 }
 
 .portfolio--card img {
     width: 100%;
+    height: 100%;
+    object-fit:fill;
     transition: .5s ease;
 }
 
@@ -293,7 +296,7 @@ span {
 }
 
 .portfolio--layer h4 {
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 .portfolio--layer p {
@@ -305,8 +308,8 @@ span {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 5rem;
-    height: 5rem;
+    width: 4rem;
+    height: 4rem;
     background: var(--text-color);
     border-radius: 50%;
 }
@@ -507,10 +510,10 @@ span {
 
 /* Modal window ABOUT section */
   
-  .close-modal {
-    position: absolute;
-    top: 1.2rem;
-    right: 2rem;
+.close-modal {
+    position: fixed;
+    top: .8rem;
+    right: 1.6rem;
     font-size: 5rem;
     color: #333;
     cursor: pointer;
@@ -522,14 +525,13 @@ span {
     display: none;
   }
   
-  .modal {
+.modal {
     position: fixed; 
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
-    /* width: 100%;  */
-    width: auto;
-    height: auto; 
+    width: 70%;
+    height: 50%; 
     margin: 0; 
     padding: 2rem; 
     border-radius: 5px;
@@ -547,7 +549,7 @@ span {
 }
 
 .overlay {
-    position: fixed; /* Change to fixed positioning */
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
